<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bgk">

    <RelativeLayout
        android:id="@+id/sdk"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:padding="2dp" >

        <LinearLayout
            android:id="@+id/dashboard_centre_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_marginTop="@dimen/medium_padding"
            android:orientation="vertical" >
    <LinearLayout
        android:id="@+id/idlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:orientation="vertical" >
        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:layout_marginTop="@dimen/max_margin"
            android:src="@drawable/elogo" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/cdd"
            android:textStyle="bold|italic"
            android:text="New Registration"
            android:layout_marginTop="@dimen/max_margintop"
            android:textSize="18sp"/>

        <LinearLayout
            android:id="@+id/btnlow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="@dimen/medium_padding" >


            <EditText
                android:id="@+id/txt_driverid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_base"

                android:gravity="center"
                android:hint="@string/lrid" />
            <EditText
                android:id="@+id/stname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_base"
                android:layout_marginTop="@dimen/max_margintop"
                android:gravity="center"
                android:hint="@string/fname" />
            <EditText
                android:id="@+id/stlname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_base"
                android:layout_marginTop="@dimen/max_margintop"
                android:gravity="center"
                android:hint="@string/lname" />
            <EditText
                android:id="@+id/stmob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_base"
                android:layout_marginTop="@dimen/max_margintop"
                android:gravity="center"
                android:inputType="phone"
                android:hint="@string/ph" />
            <EditText
                android:id="@+id/stmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_base"
                android:layout_marginTop="@dimen/max_margintop"
                android:gravity="center"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />


            <EditText
                android:id="@+id/txt_vin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_base"
                android:layout_marginTop="@dimen/max_margintop"
                android:gravity="center"

                android:hint="@string/vin" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_base"
                android:visibility="gone"
                android:layout_marginTop="@dimen/max_margintop"
                android:hint="@string/password"

                android:gravity="center"
                android:inputType="textPassword"
                android:singleLine="true" />



            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/submit_button_base"
                android:gravity="center"
                android:onClick="onClick"
                android:singleLine="true"
                android:text="Submit"
                android:textColor="#000"
                android:textColorHint="#c2c2c2"
                />


        </LinearLayout>
</LinearLayout>
            </LinearLayout>
            </ScrollView>
        </RelativeLayout>


</RelativeLayout>
