<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:weightSum="3"
        android:background="@android:color/white">

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/cancel"
            tools:ignore="ButtonStyle"
            android:textColor="@android:color/white"
            style="@style/krd_button" />

        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/clear"
            android:layout_marginRight="10dp"
            tools:ignore="ButtonStyle"
            android:textColor="@android:color/white"
            style="@style/krd_button"  />

        <Button
            android:id="@+id/getsign"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/save"
           android:layout_marginRight="10dp"
            tools:ignore="ButtonStyle"
            android:textColor="@android:color/white"
            style="@style/krd_button"  />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="#fff"
        android:orientation="vertical" >

    </LinearLayout>
    </LinearLayout>