<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

<LinearLayout
    android:id="@+id/monthn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
     >

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/low_padding">

        <TableRow android:layout_marginTop="@dimen/low_padding"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_weight="0.4"
                android:text="DATE"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txtonduty"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_weight="0.4"
                android:text="@string/on_dutty"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtofdutty"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_weight="0.5"
                android:textStyle="bold"
                android:padding="@dimen/medium_padding"
                android:textColor="@color/black"
                android:text="@string/of_dutty" />

            <TextView
android:id="@+id/txtdrive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/drive"
                android:singleLine="true" />
            <TextView
android:id="@+id/txt_sleep"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/sleep"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:singleLine="true" />
            <TextView
                android:id="@+id/todrdr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text=""
                android:textColor="@color/black"
                android:textStyle="bold"
                android:singleLine="true" />
            <ImageView
                android:id="@+id/imgvk"
                android:layout_width="0dp"
                android:visibility="gone"
                android:layout_height="30dp"
                android:layout_weight="0.2"
                android:src="@drawable/view"/>
            <TextView
                android:id="@+id/txtcertfy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="Certify now"
                android:layout_gravity="center"
                android:gravity="center"
              android:background="@drawable/button_ident"
                android:textColor="@color/white"
                android:textStyle="bold"
                />
        </TableRow>

    </TableLayout>

</LinearLayout>
    </LinearLayout>