<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:background="@drawable/bgk"
    tools:context="com.isoft.trucksoft_elog.BluetoothMainActivity">
    <RelativeLayout
        android:id="@+id/header_cover_imagez"
        android:layout_width="match_parent"
        android:background="@color/splgray"
        android:layout_height="60dp">


        <TextView
            android:id="@+id/iv_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="3dp"
            android:text="@string/backfont"
            android:textSize="@dimen/font_sze"
            android:padding="3dp"
            />
        <ImageView
            android:id="@+id/tlogo"

            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:paddingTop="2dp"
            android:padding="8dp"

            android:layout_centerHorizontal="true"
            android:paddingBottom="2dp"
            android:src="@drawable/elogo"/>
        <TextView
            android:id="@+id/txttread"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"

            android:layout_alignRight="@+id/tlogo"
            android:visibility="visible"

            android:text="@string/trade"
            android:textSize="16dp"

            android:textColor="@color/blue"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txjjjjhd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="right"
            android:layout_alignParentRight="true"

            android:visibility="visible"
            android:padding="16dp"
            android:text="@string/verz"
            android:layout_marginRight="40dp"
            android:textColor="@color/white"
            android:textStyle="bold" />


    </RelativeLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/header_cover_imagez"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <ImageButton
        android:id="@+id/buttonScan"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:layout_alignParentBottom="true"
        android:contentDescription="Scan"
        android:layout_marginBottom="15dp"
        android:src="@drawable/scan_button_style" />

    <ListView
        android:id="@+id/scanListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonScan"
        android:stackFromBottom="false"
        android:layout_marginBottom="15dp"
        android:layout_alignParentLeft="true"/>
</RelativeLayout>
</RelativeLayout>
