<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/my_custom_background"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/companycolor"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txtalert"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="12dp"
                    android:background="@color/companycolor"
                    android:text="@string/alertfont"
                    android:textColor="@color/white"
                    android:layout_height="50dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:background="@color/companycolor"
                    android:text="CONTACT INFORMATION "
                    android:textColor="@color/white"
                    android:layout_height="50dp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/txt_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="17dp"
                android:textColor="@color/companycolor"
                />
            <TextView
                android:id="@+id/txt_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:textColor="@color/companycolor"
                android:text="   You are using trial version. If you need orginal features please contact below information"/>

            <TextView
                android:id="@+id/helpline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/contactemail"
                android:textColor="@color/companycolor"
                android:textStyle="bold"
                android:textSize="14sp"
                />
            <TextView
                android:id="@+id/helpemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_gravity="center"
                android:gravity="center"

                android:text="@string/contactemail11"
                android:textColor="@color/companycolor"
                android:textStyle="bold"
                android:textSize="14sp"
                />
            <TextView
                android:id="@+id/helpwebsite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_gravity="center"
                android:gravity="center"

                android:text="@string/cwebsite"
                android:textColor="@color/companycolor"
                android:textStyle="bold"
                android:textSize="14sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/companycolor"
                    android:textColor="@color/white"
                    android:text="OK"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    android:textSize="18sp"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>